# AviSynth-SmoothUV2

./: CHANGELOG.md  CMakeLists.txt  README.md  SmoothUV.sln  SmoothUV.vcxproj  SmoothUV.vcxproj.filters  SmoothUV2.sln  SmoothUV2.vcxproj  SmoothUV2.vcxproj.filters
msvc/: SmoothUV2.vcxproj  SmoothUV2.vcxproj.filters
smoothuv_5F25_dll_20030902/: SSmooth.txt  SmoothFunc.cpp  SmoothFunc.h  SmoothIQ.cpp  SmoothIQ.dsp  SmoothIQ.dsw  SmoothIQ.res  avisynth.h
src/: SmoothUV.cpp  SmoothUV.rc  SmoothUV2.cpp  SmoothUV2.h  SmoothUV2.rc  SmoothUV2_AVX2.cpp  SmoothUV2_AVX512.cpp  SmoothUV2_SSE2.cpp  SmoothUV2_SSE41.cpp  SmoothUV2_SSSE3.cpp  resource.h
